added makefile support

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author = Ben Johnson
 author_email = ben@johnsontech.io
 license = MIT
 # readme = "README.md"
-python = ^3.6
+python = ^3.7
 homepage =
 repository =
 documentation =
@@ -33,14 +33,23 @@ where=src
 [tox:tox]
 isolated_build = True
 # envlist = py27, py35, py36, py37, pypy, jython
-envlist = py39
+envlist = py39, flake8, black, isort
+
+
 
 [testenv]
 deps =
     pytest
     pytest-cov[all]
-    black
-    isort
+commands =
+    pytest --cov-report=term --cov-report=html --cov=app tests/
+
+[testenv:py39]
+basepython = python3.9
+
+
+[testenv:flake8]
+deps =
     flake8
     flake8-builtins
     flake8-comprehensions
@@ -52,12 +61,21 @@ deps =
     flake8-unused-arguments
     flake8-sfs
     flake8-annotations
-
 commands =
-    flake8
-    pytest --cov=app tests/
+  flake8
+
+[testenv:black]
+deps =
+    black
+commands =
     black --check --diff src tests
+
+[testenv:isort]
+deps =
+    isort
+commands =
     isort --check-only --diff src tests
+
 
 [coverage:run]
 branch = True
@@ -68,6 +86,9 @@ exclude_lines =
     pragma: no cover
     def __repr__
     if __name__ == .__main__.:
+
+[coverage:html]
+directory = build/coverage_html_report
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
