--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,9 @@ end_of_line = lf
 charset = utf-8
 max_line_length = 120
 
+[Makefile]
+indent_style = tab
+
 # Docstrings and comments use max_line_length = 79
 [*.py]
 max_line_length = 88
