added pre-commit config

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ where=src
 [tox:tox]
 isolated_build = True
 # envlist = py27, py35, py36, py37, pypy, jython
-envlist = py39, flake8, black, isort
+envlist = py39, lint
 
 
 
@@ -48,9 +48,13 @@ commands =
 basepython = python3.9
 
 
-[testenv:flake8]
+[testenv:lint]
 deps =
+    black
+    isort
     flake8
+    flake8-black
+    flake8-isort
     flake8-builtins
     flake8-comprehensions
     flake8-fixme
@@ -64,17 +68,17 @@ deps =
 commands =
   flake8
 
-[testenv:black]
-deps =
-    black
-commands =
-    black --check --diff src tests
+# [testenv:black]
+# deps =
+#     black
+# commands =
+#     black --check --diff src tests
 
-[testenv:isort]
-deps =
-    isort
-commands =
-    isort --check-only --diff src tests
+# [testenv:isort]
+# deps =
+#     isort
+# commands =
+#     isort --check-only --diff src tests
 
 
 [coverage:run]
