--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,23 +3,34 @@ repos:
   rev: v4.3.0
   hooks:
   - id: check-yaml
+    exclude: ^iac|template # matches all yml files iac
   - id: end-of-file-fixer
   - id: check-json
-    exclude: (settings|launch|extensions).json
+    exclude: ^.vscode
   - id: check-shebang-scripts-are-executable
-  # - id: detect-aws-credentials
+  - id: detect-aws-credentials
+    args: ['--allow-missing-credentials']
   - id: detect-private-key
   - id: trailing-whitespace
+  - id: mixed-line-ending
+    args: ['--fix=no']
+- repo: https://github.com/PyCQA/bandit
+  rev: '1.7.4'
+  hooks:
+  - id: bandit
+    args: ['-c', 'pyproject.toml']
+    additional_dependencies: ['toml']
 # - repo: https://github.com/aws-cloudformation/cfn-python-lint
 #   rev: v0.61.0
 #   hooks:
 #   - id: cfn-python-lint
+#     files: iac/.*\.(json|yml|yaml)$
 - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
   rev: 2.4.0
   hooks:
   - id: editorconfig-checker
     alias: ec
-    files: .editorconfig
+    files: ^.editorconfig
 - repo: https://github.com/PyCQA/flake8
   rev: 4.0.1
   hooks:
@@ -28,6 +39,7 @@ repos:
     types: [python]
     additional_dependencies:
       - flake8
+      - flake8-docstrings
       - flake8-black
       - flake8-isort
       - isort
