--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Project
 author = Ben Johnson
 author_email = ben@johnsontech.io
 license = MIT
-# readme = "README.md"
+readme = "README.md"
 python = ^3.7
 homepage =
 repository =
@@ -33,20 +33,17 @@ where=src
 [tox:tox]
 isolated_build = True
 # envlist = py27, py35, py36, py37, pypy, jython
-envlist = py39, lint
-
-
+envlist = py39, lint, clean, report
 
 [testenv]
 deps =
     pytest
-    pytest-cov[all]
+    pytest-cov
 commands =
-    pytest --cov-report=term --cov-report=html --cov=app tests/
+    pytest --cov=app tests/
 
 [testenv:py39]
 basepython = python3.9
-
 
 [testenv:lint]
 deps =
@@ -57,6 +54,7 @@ deps =
     flake8-isort
     flake8-builtins
     flake8-comprehensions
+    flake8-docstrings
     flake8-fixme
     flake8-functions-names
     flake8-print
@@ -70,6 +68,15 @@ commands =
 
 [coverage:run]
 branch = True
+source =
+    app
+omit =
+    .venv/*
+    tests/*
+
+[coverage:paths]
+source =
+   src
 
 [coverage:report]
 show_missing = True
@@ -77,14 +84,23 @@ exclude_lines =
     pragma: no cover
     def __repr__
     if __name__ == .__main__.:
+commands =
+    coverage report
+    coverage html
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
 
 [coverage:html]
 directory = build/coverage_html_report
 
 [flake8]
-exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
+exclude = .venv,.git,.tox,docs,.pytest_cache,.vscode,bin,lib,deps,build,scripts,tests
 max-complexity = 25
 doctests = True
+docstring-convention = google
 # To work with Black
 # E501: line too long
 # W503: Line break occurred before a binary operator
@@ -92,7 +108,9 @@ doctests = True
 # D202 No blank lines allowed after function docstring
 # W504 line break after binary operator
 # SFS301 Ignore f-strings
+# ANN101: Ignore self not having annotations
 ignore =
+    ANN101,
     SFS301,
     E501,
     W503,
